# FastGL

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  cge  color.cpp  color.h  color.hpp  draw_process.cpp  draw_process.h  draw_process.hpp  fastgl.cpp  fastgl.hpp  frame_generator.h  frame_process.cpp  frame_process.h  image_format.h  image_format.hpp  image_generator.h  image_process.cpp  image_process.h  include_frame_core.h  include_graphic_core.h  line.cpp  line.h  line.hpp  logging.h  main.cpp  param_values.hpp  params.cpp  params.hpp  png.cpp  png.h  png_init.cpp  png_init.h  ppm.cpp  ppm.h  test.cpp
frame_generators/: cge_sdl2.cpp  cge_sdl2.h
image_formats/: cge_png.cpp  cge_png.h  cge_ppm.cpp  cge_ppm.h  gl_png.cpp  gl_png.hpp  gl_ppm.cpp  gl_ppm.hpp  image_format.hpp
images/: README.md
